2014-08-29 belangeo <belangeo@gmail.com>

    * Release tag: 0.7.1.
    - rev 1236

2014-09-12 belangeo <belangeo@gmail.com>

    * E-Pyo: Added RadioPyo to the template choices.  
    - rev 1234

2014-09-09 belangeo <belangeo@gmail.com>

    * Fixed Compare when used with None or a string. Print a warning and set 'comp' attribute to 0. 
    - rev 1229

2014-09-05 belangeo <belangeo@gmail.com>

    * Fixed live interpreter of the server window when using arrow keys navigation.
    - rev 1228

2014-09-04 belangeo <belangeo@gmail.com>

    * E-Pyo: Check if WxPython 3.0 is installed, otherwise uses 2.8.
    - rev 1227

2014-09-02 belangeo <belangeo@gmail.com>

    * Added anti-aliasing to PyoTableObject's grapher widget. Fixed Ctrl+W on the grapher.
    - rev 1225, 1226

2014-08-29 belangeo <belangeo@gmail.com>

    * Release tag: 0.7.0.
    - rev 1224

2014-08-26 belangeo <belangeo@gmail.com>

    * pyo can now be used without any GUI toolkit (WxPython or TKinter). Widgets are simply disabled.
    - rev 1208

2014-06-22 belangeo <belangeo@gmail.com>

    * Added Server methods to auto-connect Jack ports to already opened ports.
    - rev 1201

2014-05-23 belangeo <belangeo@gmail.com>

    * E-Pyo: output log now in realtime.
    - rev 1197

2014-04-24 belangeo <belangeo@gmail.com>

    * Added new object: Tanh, hyperbolic tangent function on audio signal.
    - rev 1188

-------------------------------------------------------------------------------------

2014-04-11 belangeo <belangeo@gmail.com>

    * Release tag: 0.6.9.
    - rev 1185

2014-04-11 belangeo <belangeo@gmail.com>

    * Added lot of methods to PyoTableObject (retify, bipolarGain, invert, lowpass, fadein, fadeout, pow).
    - rev 1182

2014-04-04 belangeo <belangeo@gmail.com>

    * Added new object: PartialTable, generates waveforms made of inharmonic components.
    - rev 1177

2014-03-12 belangeo <belangeo@gmail.com>

    * Added a Scope example in examples/utilities.
    - rev 1168
